tests/errors/array-invalid-size.ja
procedure main()
    int x[0]
    skip
